@@ -8,6 +8,7 @@ Version 5.9.7
 - Fixed a few missing definitions in <propeller.h>
 - Fixed a problem with SendRecvDevice() in BASIC
 - Fixed an incorrect optimization for loops containing GOSUB
+- Fixed multiple args in DEBUG() statements with -gbrk
 - Improved C++ compatibility for class functions, including supporting "static" in classes and declarations of functions outside the class
 
 Version 5.9.6
